@@ -1,3 +1,8 @@
+2015-07-08  Jason Merrill  <jason@redhat.com>
+
+	* pt.c (instantiation_dependent_r) [TRAIT_EXPR]: Call
+	value_dependent_expression_p.
+
 2015-07-06  Jason Merrill  <jason@redhat.com>
 
 	* pt.c (reduce_template_parm_level): Also build the TYPE_DECL
